{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 261,
  "lineage": "9e335e0a-daf0-ece6-b98c-3de5fc53080d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:transit-gateway/tgw-0438f1e473687e7b9",
            "association_default_route_table_id": "tgw-rtb-0c24cc62008427525",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "main-tgw",
            "dns_support": "enable",
            "id": "tgw-0438f1e473687e7b9",
            "multicast_support": "disable",
            "owner_id": "491230850393",
            "propagation_default_route_table_id": "tgw-rtb-0c24cc62008427525",
            "security_group_referencing_support": "disable",
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:transit-gateway-attachment/tgw-attach-04a10d8ff908d493d",
            "dns_support": "enable",
            "id": "tgw-attach-04a10d8ff908d493d",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-05a5df80b6ebbb320",
              "subnet-07d8eae7aded61a1b"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0438f1e473687e7b9",
            "vpc_id": "vpc-0912f8d55bb144fd1",
            "vpc_owner_id": "491230850393"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.this",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:transit-gateway-attachment/tgw-attach-078ea0e649f03491c",
            "dns_support": "enable",
            "id": "tgw-attach-078ea0e649f03491c",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-06bcf8e3cf673e0e2",
              "subnet-0c0c0ebc4848b9977"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0438f1e473687e7b9",
            "vpc_id": "vpc-053d4e780c795ab35",
            "vpc_owner_id": "491230850393"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.this",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_to_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06fd2610d7c9921d63322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fd2610d7c9921d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0438f1e473687e7b9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.this",
            "aws_ec2_transit_gateway_vpc_attachment.internet",
            "aws_ec2_transit_gateway_vpc_attachment.workload",
            "module.internet_vpc.aws_route_table.private",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "workload_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0630e0b0ff71afee01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0630e0b0ff71afee0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0438f1e473687e7b9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.this",
            "aws_ec2_transit_gateway_vpc_attachment.internet",
            "aws_ec2_transit_gateway_vpc_attachment.workload",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available",
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:security-group/sg-08b5bd304eb207a60",
            "description": "Security group for hackernews-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b5bd304eb207a60",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d13e38956bde863"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hackernews-db-sg",
            "name_prefix": "",
            "owner_id": "491230850393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "hackernews",
              "Environment": "production"
            },
            "tags_all": {
              "Application": "hackernews",
              "Environment": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.this",
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:security-group/sg-05d13e38956bde863",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05d13e38956bde863",
            "ingress": [],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "491230850393",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.hackernews_fetcher",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:security-group/sg-0da94d9d50fca8969",
            "description": "Security group for hackernews-fetcher",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da94d9d50fca8969",
            "ingress": [],
            "name": "hackernews-fetcher-sg",
            "name_prefix": "",
            "owner_id": "491230850393",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/tf-20260129003104016300000005/aab4110acf576930",
            "arn_suffix": "targetgroup/tf-20260129003104016300000005/aab4110acf576930",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/tf-20260129003104016300000005/aab4110acf576930",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260129003104016300000005",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/internet-nlb-tg/7241a9c54a45f004",
            "arn_suffix": "targetgroup/internet-nlb-tg/7241a9c54a45f004",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/internet-nlb-tg/7241a9c54a45f004",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internet-nlb-tg",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:internet-gateway/igw-0396ca09e2a130d30",
            "id": "igw-0396ca09e2a130d30",
            "owner_id": "491230850393",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:route-table/rtb-06fd2610d7c9921d6",
            "id": "rtb-06fd2610d7c9921d6",
            "owner_id": "491230850393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "internet-private"
            },
            "tags_all": {
              "Name": "internet-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137bd34cfe226d7b",
            "route_table_id": "rtb-06fd2610d7c9921d6",
            "subnet_id": "subnet-07d8eae7aded61a1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_route_table.private",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c587d0b14b21f58a",
            "route_table_id": "rtb-06fd2610d7c9921d6",
            "subnet_id": "subnet-05a5df80b6ebbb320"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_route_table.private",
            "module.internet_vpc.aws_subnet.private",
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-07d8eae7aded61a1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d8eae7aded61a1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-05a5df80b6ebbb320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a5df80b6ebbb320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-0b2279aaf7579b212",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2279aaf7579b212",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-08684316bc1f341b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08684316bc1f341b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0912f8d55bb144fd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_vpc.aws_vpc.this",
            "module.internet_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.internet_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:vpc/vpc-0912f8d55bb144fd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c21d92973a1acb29",
            "default_route_table_id": "rtb-02f4f78f931ec13b2",
            "default_security_group_id": "sg-0a8d58879c58eca83",
            "dhcp_options_id": "dopt-0b43048fcd2a738d1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0912f8d55bb144fd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f4f78f931ec13b2",
            "owner_id": "491230850393",
            "tags": {
              "Name": "internet"
            },
            "tags_all": {
              "Name": "internet"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.workload_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/tf-20260129003102788300000004/498db04538c9b8bb",
            "arn_suffix": "targetgroup/tf-20260129003102788300000004/498db04538c9b8bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:491230850393:targetgroup/tf-20260129003102788300000004/498db04538c9b8bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260129003102788300000004",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:internet-gateway/igw-085cabdfb2dbfd4a7",
            "id": "igw-085cabdfb2dbfd4a7",
            "owner_id": "491230850393",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:route-table/rtb-0630e0b0ff71afee0",
            "id": "rtb-0630e0b0ff71afee0",
            "owner_id": "491230850393",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workload-private"
            },
            "tags_all": {
              "Name": "workload-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed59717ad41eebde",
            "route_table_id": "rtb-0630e0b0ff71afee0",
            "subnet_id": "subnet-06bcf8e3cf673e0e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dcd1c94cd82d547",
            "route_table_id": "rtb-0630e0b0ff71afee0",
            "subnet_id": "subnet-0c0c0ebc4848b9977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_route_table.private",
            "module.workload_vpc.aws_subnet.private",
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-06bcf8e3cf673e0e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bcf8e3cf673e0e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-0c0c0ebc4848b9977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0c0ebc4848b9977",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-00cc97bb1934e8d4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cc97bb1934e8d4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:subnet/subnet-06410344e28a2f9ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06410344e28a2f9ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491230850393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-053d4e780c795ab35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.workload_vpc.aws_vpc.this",
            "module.workload_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.workload_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:491230850393:vpc/vpc-053d4e780c795ab35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0afaebeb553d47afa",
            "default_route_table_id": "rtb-055fc7c75f75221db",
            "default_security_group_id": "sg-0d60fd5ad55f221dc",
            "dhcp_options_id": "dopt-0b43048fcd2a738d1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053d4e780c795ab35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055fc7c75f75221db",
            "owner_id": "491230850393",
            "tags": {
              "Name": "workload"
            },
            "tags_all": {
              "Name": "workload"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}